Updated with world test data.

--- a/lct.html
+++ b/lct.html
@@ -3,7 +3,7 @@
 // *********************
 // 
 // Created by Kevin Thomas 03/22/20.
-// Modified by Kevin Thomas 03/22/20.
+// Modified by Kevin Thomas 04/11/20.
 // Apache License, Version 2.0
 // 
 // Live COVID-19 Tracker is a simple web app that shows the latest COVID-19 
@@ -42,8 +42,17 @@
     <div class="jumbotron bg-transparent">
       <h4 class="display-5">World</h4>
       <p id="world_cases"></p>
+      <p id="world_today_cases"></p>
       <p id="world_deaths"></p>
+      <p id="world_today_deaths"></p>
       <p id="world_recovered"></p>
+      <p id="world_active"></p>
+      <p id="world_critical"></p>
+      <p id="world_cases_per_one_million"></p>
+      <p id="world_deaths_per_one_million"></p>
+      <p id="world_tests"></p>
+      <p id="world_tests_per_one_million"></p>
+      <p id="world_affected_countries"></p>
       <br>
       <h4 class="display-5" id="text-output"></h4>
       <p id="country_cases"></p>
@@ -54,12 +63,15 @@
       <p id="country_active"></p>
       <p id="country_critical"></p>
       <p id="country_cases_per_one_million"></p>
+      <p id="country_deaths_per_one_million"></p>
+      <p id="country_tests"></p>
+      <p id="country_tests_per_one_million"></p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="lct_script.js"></script>
   </body>
 </html>
