--- a/lct.html
+++ b/lct.html
@@ -1,19 +1,22 @@
-<!--
-// Live COVID-19 Tracker
-// *********************
-// 
-// Created by Kevin Thomas 03/22/20.
-// Modified by Kevin Thomas 04/11/20.
-//
-// Apache License, Version 2.0
-// 
-// Live COVID-19 Tracker is a simple web app that shows the latest COVID-19 
-// statistics feed of the world and your country of choice in real-time which
-// refreshes every 60 seconds.
+<!-- 
+Live COVID-19 Tracker US
+************************
+
+Created by Kevin Thomas 03/22/20
+Modified by Kevin Thomas 03/22/20
+
+Copyright: (c) 2020, Kevin Thomas <kevin@mytechnotalent.com>
+Apache License, Version 2.0 (see COPYING or https://www.apache.org/licenses/LICENSE-2.0)
+
+Live COVID-19 Tracker is a simple web app that shows the latest COVID-19 
+statistics feed of the world and your country of choice in real-time which
+refreshes every 60 seconds.
+
+Version 0.0.1 Alpha
 -->
 
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
